--- a/html/home.htm
+++ b/html/home.htm
@@ -39,6 +39,9 @@
                   <input type="text" name="message" id="message" class="form-control" autocomplete="off">
               </div>
 
+              <hr>
+              <a href="javascript:void(0)" class="btn btn-outline-secondary" id="sendBtn">Send Message</a>
+
               <input type="hidden" name="action" id="action">
               <hr/>
 
@@ -59,6 +62,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script>
     let socket = null;
+    let output = document.getElementById("output")
+    let userField = document.getElementById("username")
+    let msgField = document.getElementById("message")
     window.onbeforeunload = function () {
         console.log("leaving")
         let jsonData = {};
@@ -96,19 +102,57 @@
                         })
                     }
                     break;
+                case "broadcast":
+                    output.innerHTML = output.innerHTML + data.message + "<br>"
+                    break;
+
+
             }
 
         }
 
-        let userInput = document.getElementById("username")
-        userInput.addEventListener("change", function(){
+        userField = document.getElementById("username")
+        userField.addEventListener("change", function(){
             let jsonData = {};
             jsonData["action"] = "username"
             jsonData["username"] = this.value;
             socket.send(JSON.stringify(jsonData))
         })
 
+        msgField.addEventListener("keydown", function (event) {
+            if (event.code === "Enter"){
+                if (!socket){
+                    console.log("no connection")
+                    return false
+                }
+
+                if ((userField.value  == "") ||  (msgField.value == "")){
+                    alert("fill out user and message")
+                }else{
+                    sendMessage()
+                }
+                event.preventDefault()
+                event.stopPropagation()
+            }
+        })
+        document.getElementById("sendBtn").addEventListener("click", function () {
+            if ((userField.value  == "") ||  (msgField.value == "")){
+                alert("fill out user and message")
+            }else{
+                sendMessage()
+            }
+        })
+
     })
+
+    function sendMessage() {
+        let jsonData = {};
+        jsonData["action"] = "broadcast"
+        jsonData["username"] = userField.value
+        jsonData["message"] = msgField.value
+        socket.send(JSON.stringify(jsonData))
+        msgField.value = ""
+    }
   </script>
 </html>
 
